--- a/review_classification.ipynb
+++ b/review_classification.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#https://www.shanelynn.ie/select-pandas-dataframe-rows-and-columns-using-iloc-loc-and-ix/\n"
@@ -25,8 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -60,14 +64,18 @@
    "source": [
     "##carregando dados, filtrando-os e salvando e um novo objeto\n",
     "\n",
-    "dados = pd.read_csv('~/Documents/dsa/data/reviewFinal.csv',encoding='latin-1')\n",
+    "dados = pd.read_csv('data/reviewFinal.csv',encoding='latin-1')\n",
     "corpus = pd.DataFrame()\n",
     "listTitle = []\n",
     "listRecom = []\n",
+    "prediTitle = []\n",
+    "\n",
     "for i, r in dados.iterrows():\n",
-    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan and r['site'] == \"glassdoor\":\n",
+    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan: # and r['site'] == \"glassdoor\":\n",
     "        listTitle.append(r['title'])\n",
     "        listRecom.append(r['recommend'])\n",
+    "    elif r['recommend'] == 'NI' and r['title'] is not np.nan:\n",
+    "        prediTitle.append(r['title'])\n",
     "\n",
     "## criando objeto para encoder\n",
     "encoder = LabelEncoder()"
@@ -75,8 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "corpus['title']     = listTitle\n",
@@ -85,27 +95,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### GERANDO LINHAS PARA DADOS DE TREINO E TESTE\n",
     "x = [ i for i in range(len(corpus))]\n",
     "shuffle(x)\n",
     "\n",
-    "rows_train =  x[0:round( len(corpus) * .75)] #25000\n",
-    "rows_test  = x[round( len(corpus) * .75):(len(corpus))]\n",
+    "rows_train =  x[0:round( len(corpus) * .80)] #25000\n",
+    "rows_test  = x[round( len(corpus) * .80):(len(corpus))]\n",
     "dataset = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### LIMPANDO TEXTO\n",
-    "stemmer = SnowballStemmer(\"english\")\n",
+    "stemmerEng  = SnowballStemmer(\"english\")\n",
+    "stemmerPort = SnowballStemmer(\"portuguese\")\n",
+    "\n",
     "sClear = []\n",
     "tr = str.maketrans(\"\", \"\", string.punctuation)\n",
     "i = 0\n",
@@ -116,36 +132,60 @@
     "        word = word.lower() ## CONVERTENDO PARA MINUSCULO\n",
     "        word = word.translate(tr) ##REMOVENDO PONTUAÇÕES        \n",
     "        word = re.sub(\"\\d\",\" \",word) ## REMOVENDO NUMEROS\n",
-    "        word = stemmer.stem(word) ## STEMM \n",
+    "        word = stemmerEng.stem(word) ## STEMM\n",
+    "        word = stemmerPort.stem(word) ## STEMM\n",
     "        \n",
     "        clear = clear + ' ' + word\n",
     "        clear = re.sub(\"\\s+\",\" \",clear) ## REMOVENDO ESPAÇOS DUPLICADOS\n",
-    "        \n",
+    "        clear = clear.strip()\n",
+    "\n",
     "        \n",
     "    sClear.append(clear)\n",
     "    text['title'] = clear\n",
-    "    i = i + 1\n",
-    "    "
+    "    i = i + 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediTitleClean = []\n",
+    "for title in prediTitle:\n",
+    "    clear = \"\"\n",
+    "    for word in title.split():        \n",
+    "        word = word.lower() ## CONVERTENDO PARA MINUSCULO\n",
+    "        word = word.translate(tr) ##REMOVENDO PONTUAÇÕES        \n",
+    "        word = re.sub(\"\\d\",\" \",word) ## REMOVENDO NUMEROS\n",
+    "        word = stemmerEng.stem(word) ## STEMM\n",
+    "        word = stemmerPort.stem(word) ## STEMM\n",
+    "        \n",
+    "        clear = clear + ' ' + word\n",
+    "        clear = re.sub(\"\\s+\",\" \",clear) ## REMOVENDO ESPAÇOS DUPLICADOS\n",
+    "        clear = clear.strip()\n",
+    "        \n",
+    "    prediTitleClean.append(clear)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gabri\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:111: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{0, 1} {0, 1}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/sklearn/preprocessing/label.py:111: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
@@ -164,6 +204,90 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 ..., 0 1 1]\n",
+      "      recommend\n",
+      "56185       Yes\n",
+      "40744       Yes\n",
+      "6424        Yes\n",
+      "63958       Yes\n",
+      "28019        No\n",
+      "83669       Yes\n",
+      "25613       Yes\n",
+      "43749       Yes\n",
+      "53547       Yes\n",
+      "49202       Yes\n",
+      "68538       Yes\n",
+      "41214       Yes\n",
+      "21807        No\n",
+      "82821        No\n",
+      "31982       Yes\n",
+      "54472       Yes\n",
+      "72866       Yes\n",
+      "17368        No\n",
+      "62822       Yes\n",
+      "58147        No\n",
+      "85315       Yes\n",
+      "37526        No\n",
+      "80834       Yes\n",
+      "57052       Yes\n",
+      "17171       Yes\n",
+      "57297        No\n",
+      "6638        Yes\n",
+      "12608       Yes\n",
+      "69099        No\n",
+      "37233       Yes\n",
+      "...         ...\n",
+      "61462        No\n",
+      "50781       Yes\n",
+      "82465        No\n",
+      "19260       Yes\n",
+      "23961        No\n",
+      "493         Yes\n",
+      "47483       Yes\n",
+      "45095        No\n",
+      "38312       Yes\n",
+      "18603       Yes\n",
+      "66287       Yes\n",
+      "33286        No\n",
+      "54153       Yes\n",
+      "5874         No\n",
+      "64939       Yes\n",
+      "52457       Yes\n",
+      "49016        No\n",
+      "70938        No\n",
+      "68098       Yes\n",
+      "32641        No\n",
+      "17851        No\n",
+      "21372       Yes\n",
+      "13758       Yes\n",
+      "60003        No\n",
+      "45164       Yes\n",
+      "73135        No\n",
+      "73573       Yes\n",
+      "47768        No\n",
+      "24494       Yes\n",
+      "32248       Yes\n",
+      "\n",
+      "[68870 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_y)\n",
+    "print(corpus.iloc[rows_train, [1] ] )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,23 +303,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64460, 8860)"
+       "(68870, 8766)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#criando countVectorizer\n",
-    "count_vect     = CountVectorizer(stop_words= stopwords.words('english'))\n",
+    "stopWords = stopwords.words('english') \n",
+    "[stopWords.append(w) for w in stopwords.words('portuguese')]\n",
+    "\n",
+    "count_vect     = CountVectorizer(stop_words = stopWords)\n",
     "X_train_counts = count_vect.fit_transform(train)\n",
     "count_vect.vocabulary_.get(u'algorithm')\n",
     "X_train_counts.shape"
@@ -203,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64460, 8860)"
+       "(68870, 8766)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,8 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#CRIANDO OBJETO NAIVE BAYES E TREINANDO O MODELO\n",
@@ -236,8 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# FAZENDO TRANSFORMAÇÃO NOS DADOS DE TESTE E TESTANDO O MODELO NB\n",
@@ -249,24 +380,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2993  4254]\n",
-      " [  870 13369]]\n",
+      "[[ 2370  3344]\n",
+      " [  734 10769]]\n",
       "\n",
-      " acuracia :  0.7615191287349903\n"
+      " acuracia :  0.763141081489\n"
      ]
     }
    ],
    "source": [
     "## Verificando acuracia do modelo\n",
     "print( confusion_matrix(test_y, predicted) ) \n",
-    "print( '\\n acuracia : ', accuracy_score(test_y, predicted) )"
+    "print( '\\n acuracia : ', accuracy_score(test_y, predicted) )\n",
+    "\n",
+    "# acuracia :  0.7615191287349903\n",
+    "# 0.763141081489\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### classificando comentários sem recomendações"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_predict_counts = count_vect.transform(prediTitleClean)\n",
+    "X_predict_tfidf  = tfidf_transformer.transform(X_predict_counts)\n",
+    "\n",
+    "recom_predicted = clf.predict(X_predict_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Label (yes ou no) dos valores previstos\n",
+    "#np.unique(recom_predicted,return_counts=True)\n",
+    "\n",
+    "labelPred = [ 'Yes' if rec == 1 else 'No' for rec in recom_predicted ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### salvando previsoes de recomendações\n",
+    "pd.DataFrame({'predRecom': labelPred,'title': prediTitle}).to_csv('data/recommendPred.csv')"
    ]
   },
   {
@@ -300,7 +479,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictBIN = nb.predict(X_new_tfidf)"
@@ -337,7 +518,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Criando modelo SVC com Pipeline\n",
@@ -348,7 +531,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#treinando modelo\n",
@@ -358,7 +543,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictSVC = modeloSVC.predict(test)\n"
@@ -367,7 +554,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print( confusion_matrix(test_y, predictSVC) ) \n",
@@ -436,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
