--- a/review_classification_deep_learning.ipynb
+++ b/review_classification_deep_learning.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "curses is not supported on this machine (please install/reinstall curses for an optimal experience)\n"
+     ]
+    }
+   ],
    "source": [
     "## IMPORTANDO LIBS\n",
     "import nltk\n",
@@ -27,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### CRIANDO FUNÇÃO PARA REMOVER PONTUAÇÕES\n",
@@ -47,7 +57,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
    "metadata": {
     "collapsed": true
@@ -65,29 +74,28 @@
    "metadata": {
     "collapsed": true
    },
-=======
-   "execution_count": 23,
-   "metadata": {},
->>>>>>> 0cb5becb337e3bb8810bbc663887704fdc7b1f4d
    "outputs": [],
    "source": [
-    "## CARREGANDO OS DADOS\n",
-    "dados = pd.read_csv('~/Documents/dsa/data/reviewFinal.csv',encoding='latin-1')\n",
-    "corpus = pd.DataFrame()\n",
-    "listTitle = []\n",
-    "listRecom = []\n",
+    "with tf.device('/device:GPU:0'):\n",
+    "    ## CARREGANDO OS DADOS\n",
+    "    dados = pd.read_csv('data/reviewFinal.csv',encoding='latin-1')\n",
+    "    corpus = pd.DataFrame()\n",
+    "    listTitle = []\n",
+    "    listRecom = []\n",
     "\n",
-    "## FILTRANDO OS REGISTROS\n",
-    "for i, r in dados.iterrows():\n",
-    "    if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan:# and r['site'] == \"glassdoor\":\n",
-    "        listTitle.append(r['title'])\n",
-    "        listRecom.append(r['recommend'])\n"
+    "    ## FILTRANDO OS REGISTROS\n",
+    "    for i, r in dados.iterrows():\n",
+    "        if r['recommend'] != 'NI' and r['title'] != \"\" and r['title'] is not np.nan:# and r['site'] == \"glassdoor\":\n",
+    "            listTitle.append(r['title'])\n",
+    "            listRecom.append(r['recommend'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "corpus['title'] = listTitle\n",
@@ -106,8 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# LISTANDO TODOS OS VALORES PARA ATRIBUTO 'RECOMMEND'\n",
@@ -129,8 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# CONVERTENDO TERMOS PARA STEMMER E MINUSCULO E REMOVENDO DUPLICIDADE\n",
@@ -141,8 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#CRIANDO BASE DE TREINO \n",
@@ -155,8 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for doc in docs:\n",
@@ -179,8 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# misturando os valores na base de treino e convertendo em um array\n",
@@ -194,24 +212,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Step: 8070999  | total loss: \u001b[1m\u001b[32m0.39005\u001b[0m\u001b[0m | time: 23.039s\n",
+      "| Adam | epoch: 1000 | loss: 0.39005 - acc: 0.8224 -- iter: 64560/64565\n",
+      "Training Step: 8071000  | total loss: \u001b[1m\u001b[32m0.38207\u001b[0m\u001b[0m | time: 23.041s\n",
+      "| Adam | epoch: 1000 | loss: 0.38207 - acc: 0.8402 -- iter: 64565/64565\n",
+      "--\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Fetch argument None has invalid type <class 'NoneType'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-f435e7bc28fb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m#model.save('model.tflearn')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0msess\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mConfigProto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlog_device_placement\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m    \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mn_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshow_metric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m    893\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    894\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[1;32m--> 895\u001b[1;33m                          run_metadata_ptr)\n\u001b[0m\u001b[0;32m    896\u001b[0m       \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    897\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m_run\u001b[1;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[0;32m   1111\u001b[0m     \u001b[1;31m# Create a fetch handler to take care of the structure of fetches.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1112\u001b[0m     fetch_handler = _FetchHandler(\n\u001b[1;32m-> 1113\u001b[1;33m         self._graph, fetches, feed_dict_tensor, feed_handles=feed_handles)\n\u001b[0m\u001b[0;32m   1114\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1115\u001b[0m     \u001b[1;31m# Run request and get response.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, graph, fetches, feeds, feed_handles)\u001b[0m\n\u001b[0;32m    418\u001b[0m     \"\"\"\n\u001b[0;32m    419\u001b[0m     \u001b[1;32mwith\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_default\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 420\u001b[1;33m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetch_mapper\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_FetchMapper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfor_fetch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfetches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    421\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    422\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_targets\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36mfor_fetch\u001b[1;34m(fetch)\u001b[0m\n\u001b[0;32m    235\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfetch\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    236\u001b[0m       raise TypeError('Fetch argument %r has invalid type %r' %\n\u001b[1;32m--> 237\u001b[1;33m                       (fetch, type(fetch)))\n\u001b[0m\u001b[0;32m    238\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfetch\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    239\u001b[0m       \u001b[1;31m# NOTE(touts): This is also the code path for namedtuples.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Fetch argument None has invalid type <class 'NoneType'>"
+     ]
+    }
+   ],
    "source": [
-    "# reset underlying graph data\n",
-    "tf.reset_default_graph()\n",
+    "with tf.device('/device:GPU:0'):\n",
+    "    # reset underlying graph data\n",
+    "    tf.reset_default_graph()\n",
     "\n",
-    "# Build neural network\n",
-    "net = tflearn.input_data(shape=[None, len(train_x[0])])\n",
-    "net = tflearn.fully_connected(net, 8)\n",
-    "net = tflearn.fully_connected(net, 8)\n",
-    "net = tflearn.fully_connected(net, len(train_y[0]), activation='softmax')\n",
-    "net = tflearn.regression(net)\n",
+    "    # Build neural network\n",
+    "    net = tflearn.input_data(shape=[None, len(train_x[0])])\n",
+    "    net = tflearn.fully_connected(net, 8)\n",
+    "    net = tflearn.fully_connected(net, 8)\n",
+    "    net = tflearn.fully_connected(net, len(train_y[0]), activation='softmax')\n",
+    "    net = tflearn.regression(net)\n",
     "\n",
-    "# definindo o modelo e as configuraçoes\n",
-    "model = tflearn.DNN(net, tensorboard_dir='tflearn_logs')\n",
+    "    # definindo o modelo e as configuraçoes\n",
+    "    model = tflearn.DNN(net, tensorboard_dir='tflearn_logs')\n",
     "\n",
-<<<<<<< HEAD
     "    # treinando o modelo (aplicando gradient descent algorithm)\n",
     "    \n",
     "    \n",
@@ -219,17 +264,31 @@
     "    #print(sess.run(    model.fit(train_x, train_y, n_epoch=1000, batch_size=8, show_metric=True)))\n",
     "    model.fit(train_x, train_y, n_epoch=1000, batch_size=8, show_metric=True)\n",
     "    model.save('model.tflearn')"
-=======
-    "# treinando o modelo (aplicando gradient descent algorithm)\n",
-    "model.fit(train_x, train_y, n_epoch=1000, batch_size=8, show_metric=True)\n",
-    "#model.save('model.tflearn')"
->>>>>>> 0cb5becb337e3bb8810bbc663887704fdc7b1f4d
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:C:\\Users\\gabri\\Documents\\GitHub\\dsa\\model.tflearn is not in all_model_checkpoint_paths. Manually adding it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.save('model.tflearn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#FUNÇÃO PARA FAZER TRATAMENTO DOS TERMOS QUE SERÃO CLASSIFICADOS\n",
@@ -265,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7661267802289863"
+       "0.76010593810984106"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
