--- a/review_classification.ipynb
+++ b/review_classification.ipynb
@@ -27,8 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
@@ -56,8 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##carregando dados, filtrando-os e salvando e um novo objeto\n",
@@ -81,8 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "corpus['title']     = listTitle\n",
@@ -91,8 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### GERANDO LINHAS PARA DADOS DE TREINO E TESTE\n",
@@ -106,8 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### LIMPANDO TEXTO\n",
@@ -139,8 +149,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prediTitleClean = []\n",
@@ -162,17 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gabri\\Anaconda3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:111: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -184,12 +188,12 @@
    "source": [
     "train   = corpus.iloc[rows_train, [0]]\n",
     "train   = train['title'].tolist()\n",
-    "train_y = corpus.iloc[rows_train, [1] ] \n",
+    "train_y = corpus.iloc[rows_train, 1 ] \n",
     "train_y = encoder.fit_transform(train_y)\n",
     "\n",
     "test   = corpus.iloc[rows_test, [0]]\n",
     "test   = test['title'].tolist()\n",
-    "test_y = corpus.iloc[rows_test, [1]]\n",
+    "test_y = corpus.iloc[rows_test, 1]\n",
     "test_y = encoder.fit_transform(test_y)\n",
     "\n",
     "print(set(train_y), set(test_y) )"
@@ -197,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -206,69 +210,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 ..., 0 1 1]\n",
+      "[1 1 1 ..., 1 1 1]\n",
       "      recommend\n",
-      "56185       Yes\n",
-      "40744       Yes\n",
-      "6424        Yes\n",
-      "63958       Yes\n",
-      "28019        No\n",
-      "83669       Yes\n",
-      "25613       Yes\n",
-      "43749       Yes\n",
-      "53547       Yes\n",
-      "49202       Yes\n",
-      "68538       Yes\n",
-      "41214       Yes\n",
-      "21807        No\n",
-      "82821        No\n",
-      "31982       Yes\n",
-      "54472       Yes\n",
-      "72866       Yes\n",
-      "17368        No\n",
-      "62822       Yes\n",
-      "58147        No\n",
-      "85315       Yes\n",
-      "37526        No\n",
-      "80834       Yes\n",
-      "57052       Yes\n",
-      "17171       Yes\n",
-      "57297        No\n",
-      "6638        Yes\n",
-      "12608       Yes\n",
-      "69099        No\n",
-      "37233       Yes\n",
+      "46789       Yes\n",
+      "28898       Yes\n",
+      "61256       Yes\n",
+      "37821       Yes\n",
+      "7345        Yes\n",
+      "28375        No\n",
+      "84198       Yes\n",
+      "42928       Yes\n",
+      "55422       Yes\n",
+      "22033        No\n",
+      "2696         No\n",
+      "74120        No\n",
+      "62215       Yes\n",
+      "85255       Yes\n",
+      "3253         No\n",
+      "44708        No\n",
+      "69384       Yes\n",
+      "70937       Yes\n",
+      "7468        Yes\n",
+      "62814       Yes\n",
+      "72456       Yes\n",
+      "39490       Yes\n",
+      "62435       Yes\n",
+      "81926        No\n",
+      "13182        No\n",
+      "11189        No\n",
+      "22850       Yes\n",
+      "82751        No\n",
+      "3711        Yes\n",
+      "59279       Yes\n",
       "...         ...\n",
-      "61462        No\n",
-      "50781       Yes\n",
-      "82465        No\n",
-      "19260       Yes\n",
-      "23961        No\n",
-      "493         Yes\n",
-      "47483       Yes\n",
-      "45095        No\n",
-      "38312       Yes\n",
-      "18603       Yes\n",
-      "66287       Yes\n",
-      "33286        No\n",
-      "54153       Yes\n",
-      "5874         No\n",
-      "64939       Yes\n",
-      "52457       Yes\n",
-      "49016        No\n",
-      "70938        No\n",
-      "68098       Yes\n",
-      "32641        No\n",
-      "17851        No\n",
-      "21372       Yes\n",
-      "13758       Yes\n",
-      "60003        No\n",
-      "45164       Yes\n",
-      "73135        No\n",
-      "73573       Yes\n",
-      "47768        No\n",
-      "24494       Yes\n",
-      "32248       Yes\n",
+      "42320        No\n",
+      "80890       Yes\n",
+      "3264        Yes\n",
+      "12994       Yes\n",
+      "9080        Yes\n",
+      "38983        No\n",
+      "54759        No\n",
+      "38233        No\n",
+      "27723       Yes\n",
+      "29867       Yes\n",
+      "10008        No\n",
+      "45771       Yes\n",
+      "13471       Yes\n",
+      "83411       Yes\n",
+      "67625       Yes\n",
+      "30575        No\n",
+      "22091       Yes\n",
+      "46422        No\n",
+      "4427        Yes\n",
+      "58270       Yes\n",
+      "58315       Yes\n",
+      "11184       Yes\n",
+      "56693       Yes\n",
+      "11543       Yes\n",
+      "25194       Yes\n",
+      "64445       Yes\n",
+      "74510       Yes\n",
+      "136         Yes\n",
+      "82677       Yes\n",
+      "11065       Yes\n",
       "\n",
       "[68870 rows x 1 columns]\n"
      ]
@@ -295,24 +299,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64565, 9094)"
+       "(68870, 8731)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#criando countVectorizer\n",
-    "stopWords = stopwords.words('english') \n",
-    "[stopWords.append(w) for w in stopwords.words('portuguese')]\n",
+    "stopWords = stopwords.words('english') ##STOP WORD ENGLHIS\n",
+    "[stopWords.append(w) for w in stopwords.words('portuguese')] ##STOP WORD PORTUGUES\n",
+    "\n",
+    "##STOP WORD NOME DAS EMPRESAS\n",
+    "nameCompany = dados.company\n",
+    "#[stopWords.append(i) for i in set(nameCompany)]\n",
     "\n",
     "count_vect     = CountVectorizer(stop_words = stopWords)\n",
     "X_train_counts = count_vect.fit_transform(train)\n",
@@ -322,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64565, 9094)"
+       "(68870, 8731)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,8 +353,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#CRIANDO OBJETO NAIVE BAYES E TREINANDO O MODELO\n",
@@ -355,8 +365,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# FAZENDO TRANSFORMAÇÃO NOS DADOS DE TESTE E TESTANDO O MODELO NB\n",
@@ -368,17 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2890  4351]\n",
-      " [  863 13418]]\n",
+      "[[ 2322  3399]\n",
+      " [  650 10846]]\n",
       "\n",
-      " acuracia :  0.7577362698633956\n"
+      " acuracia :  0.764825463205\n"
      ]
     }
    ],
@@ -387,8 +399,24 @@
     "print( confusion_matrix(test_y, predicted) ) \n",
     "print( '\\n acuracia : ', accuracy_score(test_y, predicted) )\n",
     "\n",
-    "# acuracia :  0.7615191287349903\n",
-    "# 0.763141081489\n"
+    "# acuracia :  \n",
+    "# 0.7615191287349903\n",
+    "# 0.763141081489\n",
+    "# 0.764825463205"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "f = open('NBMult.pickle', 'wb')\n",
+    "pickle.dump(clf, f)\n",
+    "f.close()"
    ]
   },
   {
@@ -400,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -414,8 +442,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "## Label (yes ou no) dos valores previstos\n",
@@ -426,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -445,20 +475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb = BernoulliNB()\n",
     "nb.fit(X_train_tfidf, train_y)"
@@ -466,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -477,20 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2940  4252]\n",
-      " [  903 13391]]\n",
-      "\n",
-      " acuracia :  0.7555152192125105\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( confusion_matrix(test_y, predicted) ) \n",
     "print( '\\n acuracia : ', accuracy_score(test_y, predictBIN) )"
@@ -505,8 +513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Criando modelo SVC com Pipeline\n",
@@ -516,27 +526,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('vect', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
-       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
-       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
-       "        ngram_range=(1, 1), norm='l2', preprocessor=None, smooth_idf=True,\n",
-       "  ...',\n",
-       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False))])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#treinando modelo\n",
     "modeloSVC.fit(train, train_y)"
@@ -544,8 +536,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "predictSVC = modeloSVC.predict(test)\n"
@@ -553,20 +547,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3157  4084]\n",
-      " [ 1201 13080]]\n",
-      "\n",
-      " acuracia :  0.7544373199516774\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( confusion_matrix(test_y, predictSVC) ) \n",
     "print( '\\n acuracia : ', accuracy_score(test_y, predictSVC) )\n"
@@ -581,20 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  342  6899]\n",
-      " [   52 14229]]\n",
-      "\n",
-      " acuracia :  0.6770281572344578\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "modeloSVM = Pipeline([('vect', CountVectorizer(stopwords.words('english'))),\n",
     "                     ('tfidf', TfidfTransformer()),\n",
