--- a/review_classification.ipynb
+++ b/review_classification.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -413,6 +413,7 @@
    },
    "outputs": [],
    "source": [
+    "### salvando modelo\n",
     "import pickle\n",
     "f = open('NBMult.pickle', 'wb')\n",
     "pickle.dump(clf, f)\n",
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -475,9 +476,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nb = BernoulliNB()\n",
     "nb.fit(X_train_tfidf, train_y)"
@@ -485,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -496,12 +508,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2322  3399]\n",
+      " [  650 10846]]\n",
+      "\n",
+      " acuracia :  0.760236975083\n"
+     ]
+    }
+   ],
    "source": [
     "print( confusion_matrix(test_y, predicted) ) \n",
-    "print( '\\n acuracia : ', accuracy_score(test_y, predictBIN) )"
+    "print( '\\n acuracia : ', accuracy_score(test_y, predictBIN) )\n",
+    "#  acuracia :  \n",
+    "# 0.760236975083\n"
    ]
   },
   {
@@ -513,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -526,9 +551,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('vect', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), norm='l2', preprocessor=None, smooth_idf=True,\n",
+       "  ...',\n",
+       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False))])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#treinando modelo\n",
     "modeloSVC.fit(train, train_y)"
@@ -548,7 +591,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print( confusion_matrix(test_y, predictSVC) ) \n",
@@ -565,7 +610,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "modeloSVM = Pipeline([('vect', CountVectorizer(stopwords.words('english'))),\n",
